# voice-agent-mini

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: results.json  run_benchmark.py
src/voice_agent/: __init__.py  audio.py  backends.py  cli.py  latency.py  pipeline.py  vad.py
tests/: test_audio.py  test_backends.py  test_latency.py  test_pipeline.py  test_vad.py
